# aircraft_sim

./: .gitignore  Cargo.toml  Makefile  README.md
config/: block1.csv  block2.csv  block3.csv  debug.csv  standard_layout.csv  steffen.csv  test-passengers.csv  test_back_first.csv  test_layout.csv  test_layout_7.csv  test_passengers.csv
src/: bin.rs  lib.rs  main.py  main.rs
src/aircraft/: mod.rs  person.rs  tile.rs
src/config/: mod.rs
