[package]
name = "aircraft_sim"
version = "0.1.0"
authors = ["SuedeG <ymp17kwu@uea.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pistoncore-window = "0.47.0"
piston = "0.52.0"
piston2d-graphics = "0.37.0"
piston2d-opengl_graphics = "0.74.0"
piston2d-sprite = "0.61.0"
find_folder = "0.3.0"
pistoncore-sdl2_window = "0.66.0"
csv = "1.1"
