[package]
name = "aircraft_sim"
version = "0.1.0"
authors = ["SuedeG <ymp17kwu@uea.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aircraft_sim"
# path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
csv = "1.1"
rand = "0.8.3"

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]
